peak6-devopstest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: peak6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peak6-devopstest
  namespace: peak6
spec:
  replicas: 3
  selector:
    matchLabels:
      app: peak6-test
  template:
    metadata:
      labels:
        app: peak6-test
    spec:
      containers:
      - name: peak6-devopstest
        image: rumman/peak6-devopstest:1.0
        ports:
        - name: flask-port
          containerPort: 5000
        resources:
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: peak6-devopstest
  namespace: peak6
spec:
  ports:
  - port: 32000
    nodePort: 32000
    targetPort: flask-port
    protocol: TCP
  selector:
    app: peak6-test
  type: NodePort
