peak6-devopstest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: peak6-ingress
  namespace: peak6
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: peak6-devopstest.info
    http:
      paths:
      - path: /
        backend:
          serviceName: peak6-devopstest
          servicePort: 32000
